# AgentCognitiveCompressor

./: .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/api/: chat-messages-post.md  chat-sessions-post.md  health-get.md  index.md
docs/architecture/: hexagonal-architecture.md
docs/blue-print/: arxiv-2601.11653.md
docs/rules/code_architecture/: README.md
docs/rules/solid/: README.md
docs/task-designs/: 20260208185024_repository-initial-setup.md  20260208185720_rename-package-path-to-acc.md  20260208190735_acc-multiturn-control-loop-phase1.md  20260208191756_acc-schema-governed-commitment-phase2.md  20260208192231_acc-memory-evaluation-phase3.md  20260208192722_acc-live-evaluation-orchestration-phase4.md  20260208193504_openai-chat-ui-phase5.md  20260208200436_acc-mechanism-visualization-ui-phase6.md  20260208201045_acc-human-readable-overview.md  20260208202702_acc-readme-ccs-fields.md  20260208203214_ccs-full-visualization-and-japanese-phase7.md  20260208203927_ccs-empty-goal-robustness-phase8.md  20260208204341_ccs-semantic-fallback-phase9.md  20260208210520_acc-conversation-quality-alignment-phase10.md  20260208213056_acc-short-history-buffer-config-phase11.md  README.md
src/acc/: __init__.py
src/acc/domain/entities/: artifact.py  (+1 more)
tests/unit/: test_acc_multiturn_control_loop.py  test_agent_judge_evaluation.py  test_chat_session.py  test_health_check.py  test_http_chat_api.py  test_live_multi_agent_evaluation.py  test_schema_aware_cognitive_compressor.py
(+23 files in other folders)
