[project]
name = "agent-cognitive-compressor"
version = "0.1.0"
description = "ACC（Agent Cognitive Compressor）実装リポジトリ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acc"]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "D"]
ignore = ["D203", "D213", "D400", "D401", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
